# Router-POC

./: .dockerignore  Dockerfile  README.md  compose.yml  main.ipynb  main.py  pyproject.toml
.gradio/flagged/: log.csv
app/: execute_backend.py  front.py  front_refacto.py  maestro.py
app/tabs/: chat.py
app/tasks/: image_captioning.py  ocr.py  translate.py  web_search.py
notebooks/: ocr.ipynb  test.ipynb
